Revision history for {{$dist->name}}

{{$NEXT}}
        - some doc improvements by Shlomi Fish
        - cope with E<...> in abstracts (thanks, Dave Lambley!)
        - Respect jobs number in HARNESS_OPTIONS (thanks, Leon Timmermans!)
        - Add --jobs argument to dzil release (thanks, Leon Timmermans!)
        - replace uses of File::HomeDir with a simple glob (thanks, Karen
          Etheridge!)
        - fix interaction of TRIAL comment and BEGIN block in PkgVersion
          (thanks, Michael Conrad)
        - fix documentation for default NextRelease format (thanks, Dan Book!)
        - the build directory is also added to @INC when evaluating 'dzil
          authordeps --missing' (thanks, Karen Etheridge!)
        - add comments to generated CPANfile saying "don't edit me!"
          (thanks Doug Bell)
        - tests for [CPANFile] (thanks, Daniel Böhmer)

6.012     2018-04-21 10:20:21+02:00 Europe/Oslo
        - revert addition of Archive::Tar::Wrapper as a mandatory prereq (in
          release 6.011).
        - require a version of Config::MVP that adds the cwd back to @INC
        - record the perl version being used into META file
        - tiny fix to help output for "dzil new"

6.011     2018-02-11 12:57:02-05:00 America/New_York
        - stashes can now be added in [%Stash] form from a bundle (thanks,
          Karen Etheridge)
        - use $V env var as an override, when set, in [AutoVersion]
          (thanks, Karen Etheridge)
        - all remaining uses of Class::Load are replaced with Module::Runtime
          (thanks, Karen Etheridge)

6.010     2017-07-10 09:22:16-04:00 America/New_York
        - a few documentation improvements (thanks, Chase Whitener, Mary
          Ehlers, and Jonas B. Nielsen)
        - improve behavior under a noninteractive terminal
        - empty file finders should now consistently return []

6.009     2017-03-04 11:16:37-05:00 America/New_York